# energrad

./: .clangd  .gitignore  CMakeLists.txt  README.md  a.out  main.cpp  main.cu  monolith.cu  tensor.cpp  tensor.cu  tensor.hpp
include/: cuda_context.cuh  engine.cuh  op.cuh  tensor.cuh
src/: engine.cu  op.cu  tensor.cu
